refactor(backend): modernization batch 2 — Kafka on KRaft, Istio as one binary, and pinning that is no longer about synchronized
Completes the backend section: audit and modernization both closed.

Twenty-nine replacements, and several are structural rather than textual because
the thing being described no longer has the shape the file drew.

Kafka's section 4 was 'Deployment Modes: KRaft vs Classic'. ZooKeeper mode was
removed in 4.0, so there are no modes - there are node roles. Rewritten as
controller, broker and combined, with combined marked as not for production, and
the ZooKeeper-vs-KRaft Q&A replaced by one about how KRaft manages metadata.
Spring Cloud Stream's @EnableBinding/@StreamListener became the functional
Supplier/Function/Consumer model.

Istio was drawn as Pilot, Citadel and Galley. Those merged into a single istiod
binary, so the architecture diagram and the mTLS Q&A both described components
that do not exist. The CRDs were also pinned at v1alpha3 and v1beta1, both now v1,
and the file assumed sidecars are the only data plane - ambient mode with ztunnel
and waypoint went GA in 1.24.

The async module's broken-to-fixed pair taught that synchronized pins virtual
threads and ReentrantLock is the fix. JEP 491 removed that pinning entirely, so
the lesson was teaching a workaround for a solved problem. Rebuilt around what
still pins - JNI and FFM native frames - with a bounded platform-thread executor
as the fix, and the removed tracePinnedThreads flag replaced by the JFR event in
four places. Structured concurrency was updated to the current
StructuredTaskScope.open()/Subtask/Joiner shape.

One inverted claim: networkaddress.cache.ttl was said to cache DNS forever
without a SecurityManager. The defaults are 30 seconds positive and 10 negative,
and it is a java.security property rather than a -D flag - so both the behaviour
and the mechanism for changing it were wrong.

Hystrix's funeral notice appeared in four files. It is now one clause, with the
or